@@ -6,7 +6,7 @@ use strict;
 use vars qw( $VERSION @ISA );
 
 BEGIN {
-    $VERSION = '1.17_04';
+    $VERSION = '1.17_05';
     @ISA     = qw( Archive::Zip );
 }
 
