@@ -10,7 +10,7 @@ use strict;
 use vars qw{$VERSION};
 
 BEGIN {
-    $VERSION = '1.17_02';
+    $VERSION = '1.17_05';
     $VERSION = eval $VERSION;
 }
 
